--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -20,7 +20,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       # replace with the following for regular use:
-      uses: cypress-io/github-action@v6
+      - uses: cypress-io/github-action@v6
         with:
           # working-directory: examples/basic
           browser: ${{ matrix.browser }}
