--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -24,3 +24,4 @@ jobs:
         with:
           # working-directory: examples/basic
           browser: ${{ matrix.browser }}
+      - run: npm run test
