--- a/.github/workflows/html-tests.yml
+++ b/.github/workflows/html-tests.yml
@@ -23,6 +23,6 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           working-directory: ./lessons/test
-          install: false
+          # install: false
           start: npm run dev
           wait-on: http://127.0.0.1:5500
