--- a/.github/workflows/html-tests.yml
+++ b/.github/workflows/html-tests.yml
@@ -1,12 +1,11 @@
 name: html-tests
 on:
   push:
-    branches:
-      [master]
+    branches: [master]
     paths:
-    - 'lessons/test/**'
-    - package.json
-    - .github/workflows/html-tests.yml
+      - "lessons/test/**"
+      - package.json
+      - .github/workflows/html-tests.yml
 jobs:
   run-tests:
     runs-on: ubuntu-22.04
@@ -18,11 +17,13 @@ jobs:
       - name: Install 📦
         uses: cypress-io/github-action@v6
         with:
-          runTests: false
-      - name: Run Tests 🧪
-        uses: cypress-io/github-action@v6
-        with:
-          working-directory: ./lessons/test
-          install: false
-          start: npm run dev
+          # runTests: false
+          start: npm run dev -- --filter test-html
           wait-on: http://127.0.0.1:5500
+      # - name: Run Tests 🧪
+      #   uses: cypress-io/github-action@v6
+      #   with:
+      #     working-directory: ./lessons/test
+      #     install: false
+      #     start: npm run dev
+      #     wait-on: http://127.0.0.1:5500
