--- a/.github/workflows/html-tests.yml
+++ b/.github/workflows/html-tests.yml
@@ -3,18 +3,16 @@ on:
   push:
     branches: [master]
     paths:
-      - "lessons/test/**"
+      - lessons/test/**
       - package.json
       - .github/workflows/html-tests.yml
 jobs:
   run-tests:
     runs-on: ubuntu-22.04
-    container:
-      image: cypress/included:latest
-      options: --user 1001
+    container: cypress/included:latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install 📦
+      - name: Install Dependencies 📦
         uses: cypress-io/github-action@v6
         with:
           runTests: false
@@ -22,10 +20,3 @@ jobs:
           wait-on: http://127.0.0.1:5500
       - name: Run Tests 🧪
         run: npm run test -- --filter test-html 
-      # - name: Run Tests 🧪
-      #   uses: cypress-io/github-action@v6
-      #   with:
-      #     working-directory: ./lessons/test
-      #     install: false
-      #     start: npm run dev
-      #     wait-on: http://127.0.0.1:5500
