--- a/.github/workflows/react-tests.yml
+++ b/.github/workflows/react-tests.yml
@@ -1,28 +1,22 @@
-name: react-tests
+name: html-tests
 on:
   push:
     branches: [master]
     paths:
-      - "exercises/react-demo/**"
+      - exercises/react-demo/**
       - package.json
       - .github/workflows/react-tests.yml
-
 jobs:
   run-tests:
     runs-on: ubuntu-22.04
-    container:
-      image: cypress/included:latest
-      options: --user 1001
+    container: cypress/included:latest
     steps:
       - uses: actions/checkout@v4
-      - name: Install 📦
+      - name: Install Dependencies 📦
         uses: cypress-io/github-action@v6
         with:
           runTests: false
-      - name: Run Tests 🧪
-        uses: cypress-io/github-action@v6
-        with:
-          working-directory: ./exercises/react-demo
-          install: false
-          start: npm run dev
+          start: npm run dev -- --filter react-demo
           wait-on: http://127.0.0.1:5173
+      - name: Run Tests 🧪
+        run: npm run test -- --filter react-demo 
