--- a/package.json
+++ b/package.json
@@ -15,10 +15,9 @@
   ],
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "turbo": "^1.13.3"
-  },
   "devDependencies": {
-    "cypress": "^13.8.1"
+    "cypress": "^13.8.1",
+    "live-server": "^1.2.2",
+    "turbo": "^1.13.3"
   }
 }
