--- a/lessons/html-demo/package.json
+++ b/lessons/html-demo/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "scripts": {
     "test": "cypress run --headless",
-    "dev": "live-server --port=5500"
+    "dev": "live-server"
   },
   "author": "",
   "license": "ISC"
